--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -100,7 +100,7 @@ jobs:
         working-directory: frontend
         run: npm run build
         env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL || 'http://13.126.156.163/api' }}
+          NODE_ENV: production
 
       - name: Upload frontend build
         uses: actions/upload-artifact@v4
