--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,21 +6,27 @@ on:
   workflow_dispatch:
 
 env:
-  NODE_VERSION: '18.x'
-  DOCKER_BUILDKIT: 1
-  COMPOSE_DOCKER_CLI_BUILD: 1
+  NODE_VERSION: '20.x'
 
 jobs:
-  # Build Docker images
-  build-images:
-    name: Build Docker Images
+  # Build Backend Services
+  build-backend:
+    name: Build Backend Services
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: |
+            backend/microservices/shared-lib/package-lock.json
+            backend/microservices/api-gateway/package-lock.json
+            backend/microservices/auth-service/package-lock.json
+            backend/microservices/property-service/package-lock.json
 
       - name: Build shared library
         working-directory: backend/microservices/shared-lib
@@ -28,53 +34,37 @@ jobs:
           npm ci
           npm run build
 
-      - name: Build API Gateway image
-        uses: docker/build-push-action@v5
-        with:
-          context: backend/microservices
-          file: api-gateway/Dockerfile
-          push: false
-          tags: ivorian-realty/api-gateway:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          load: true
-
-      - name: Build Auth Service image
-        uses: docker/build-push-action@v5
-        with:
-          context: backend/microservices
-          file: auth-service/Dockerfile
-          push: false
-          tags: ivorian-realty/auth-service:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          load: true
-
-      - name: Build Property Service image
-        uses: docker/build-push-action@v5
-        with:
-          context: backend/microservices
-          file: property-service/Dockerfile
-          push: false
-          tags: ivorian-realty/property-service:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          load: true
-
-      - name: Save Docker images
+      - name: Build API Gateway
+        working-directory: backend/microservices/api-gateway
         run: |
-          docker save ivorian-realty/api-gateway:latest -o api-gateway.tar
-          docker save ivorian-realty/auth-service:latest -o auth-service.tar
-          docker save ivorian-realty/property-service:latest -o property-service.tar
+          npm ci
+          npm run build
 
-      - name: Upload Docker images
+      - name: Build Auth Service
+        working-directory: backend/microservices/auth-service
+        run: |
+          npm ci
+          npm run build
+
+      - name: Build Property Service
+        working-directory: backend/microservices/property-service
+        run: |
+          npm ci
+          npm run build
+
+      - name: Upload backend builds
         uses: actions/upload-artifact@v4
         with:
-          name: docker-images
+          name: backend-builds
           path: |
-            api-gateway.tar
-            auth-service.tar
-            property-service.tar
+            backend/microservices/shared-lib/dist
+            backend/microservices/shared-lib/package*.json
+            backend/microservices/api-gateway/dist
+            backend/microservices/api-gateway/package*.json
+            backend/microservices/auth-service/dist
+            backend/microservices/auth-service/package*.json
+            backend/microservices/property-service/dist
+            backend/microservices/property-service/package*.json
           retention-days: 1
 
   # Build Frontend
@@ -88,7 +78,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
@@ -113,16 +103,16 @@ jobs:
   deploy:
     name: Deploy to Production Server
     runs-on: ubuntu-latest
-    needs: [build-images, build-frontend]
+    needs: [build-backend, build-frontend]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download Docker images
+      - name: Download backend builds
         uses: actions/download-artifact@v4
         with:
-          name: docker-images
-          path: ./docker-images
+          name: backend-builds
+          path: ./backend-builds
 
       - name: Download frontend build
         uses: actions/download-artifact@v4
@@ -142,12 +132,20 @@ jobs:
 
       - name: Copy files to server
         run: |
-          ssh ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }} "mkdir -p /tmp/docker-images /tmp/frontend-build /opt/ivorian-realty/backend/microservices/infrastructure/nginx"
-          scp -r ./docker-images/* ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/tmp/docker-images/
-          scp -r ./frontend-build/* ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/tmp/frontend-build/
-          scp backend/microservices/infrastructure/docker-compose.prod.yml ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/docker-compose.yml
+          ssh ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }} "mkdir -p /opt/ivorian-realty/backend/microservices/{shared-lib,api-gateway,auth-service,property-service} /opt/ivorian-realty/frontend /opt/ivorian-realty/backend/microservices/infrastructure/nginx"
+          
+          # Copy backend builds
+          scp -r ./backend-builds/shared-lib/* ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/backend/microservices/shared-lib/
+          scp -r ./backend-builds/api-gateway/* ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/backend/microservices/api-gateway/
+          scp -r ./backend-builds/auth-service/* ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/backend/microservices/auth-service/
+          scp -r ./backend-builds/property-service/* ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/backend/microservices/property-service/
+          
+          # Copy frontend build
+          scp -r ./frontend-build/* ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/frontend/
+          
+          # Copy configuration files
           scp backend/microservices/infrastructure/nginx/nginx.conf ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/backend/microservices/infrastructure/nginx/nginx.conf
-          scp .github/scripts/deploy.sh ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/deploy.sh
+          scp .github/scripts/deploy-no-docker.sh ${{ secrets.SSH_USER || 'ec2-user' }}@${{ secrets.SERVER_HOST || '13.126.156.163' }}:/opt/ivorian-realty/deploy.sh
 
       - name: Deploy on server
         run: |
@@ -155,18 +153,9 @@ jobs:
             set -e
             cd /opt/ivorian-realty
             
-            # Load Docker images
-            docker load -i /tmp/docker-images/api-gateway.tar
-            docker load -i /tmp/docker-images/auth-service.tar
-            docker load -i /tmp/docker-images/property-service.tar
-            
             # Run deployment script
             chmod +x deploy.sh
             ./deploy.sh
-            
-            # Cleanup
-            rm -rf /tmp/docker-images
-            rm -rf /tmp/frontend-build
             
             echo "Deployment completed successfully!"
           EOF
@@ -176,4 +165,3 @@ jobs:
           sleep 30
           curl -f http://${{ secrets.SERVER_HOST || '13.126.156.163' }}/health || echo "Health check failed, but deployment may still be in progress"
         continue-on-error: true
-
