Update shared-lib package.json: use native rm instead of rimraf

--- a/backend/microservices/shared-lib/package.json
+++ b/backend/microservices/shared-lib/package.json
@@ -9,8 +9,8 @@
     "dev": "tsc --watch",
     "test": "jest",
     "lint": "eslint src/",
-    "clean": "rimraf dist",
-    "prepublish": "npm run clean && npm run build"
+    "clean": "rm -rf dist",
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "dist/",
